--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: erlef/checkout@v2
+      - uses: actions/checkout@v2
 
       - uses: actions/cache@v2
 
@@ -55,7 +55,7 @@ jobs:
 
           path: _build
 
-      - uses: actions/setup-elixir@v1
+      - uses: erlef/setup-elixir@v1
 
         with:
           elixir-version: ${{ matrix.elixir }}
