--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,18 +29,9 @@ jobs:
 
     strategy:
       matrix:
-        elixir: ["1.9.x", "1.10.x", "1.11.x"]
+        elixir: ["1.10.x", "1.10.x", "1.12.x"]
 
-        exclude:
-          - elixir: "1.10.x"
-
-            otp: "20.x"
-
-          - elixir: "1.11.x"
-
-            otp: "20.x"
-
-        otp: [20.x, 21.x, 22.x, 23.x]
+        otp: ["22.x", "23.x", "24.x"]
 
   test:
     runs-on: ubuntu-latest
@@ -68,15 +59,6 @@ jobs:
 
     strategy:
       matrix:
-        elixir: ["1.9.x", "1.10.x", "1.11.x"]
+        elixir: ["1.10.x", "1.10.x", "1.12.x"]
 
-        exclude:
-          - elixir: "1.10.x"
-
-            otp: "20.x"
-
-          - elixir: "1.11.x"
-
-            otp: "20.x"
-
-        otp: [20.x, 21.x, 22.x, 23.x]
+        otp: ["22.x", "23.x", "24.x"]
