--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/cache@v2
 
         with:
-          key: dialyzer-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
+          key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}
 
           path: _build
 
@@ -29,9 +29,20 @@ jobs:
 
     strategy:
       matrix:
-        elixir: ["1.10.x", "1.10.x", "1.12.x"]
+        elixir:
+          - 1.12.x
+          - 1.13.x,
+          - 1.14.x
 
-        otp: ["22.x", "23.x", "24.x"]
+        exclude:
+          - elixir: 1.12.x
+
+            otp: 25.x
+
+        otp:
+          - 23.x
+          - 24.x
+          - 25.x
 
   test:
     runs-on: ubuntu-latest
@@ -42,7 +53,7 @@ jobs:
       - uses: actions/cache@v2
 
         with:
-          key: test-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
+          key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}
 
           path: _build
 
@@ -59,6 +70,17 @@ jobs:
 
     strategy:
       matrix:
-        elixir: ["1.10.x", "1.10.x", "1.12.x"]
+        elixir:
+          - 1.12.x
+          - 1.13.x,
+          - 1.14.x
 
-        otp: ["22.x", "23.x", "24.x"]
+        exclude:
+          - elixir: 1.12.x
+
+            otp: 25.x
+
+        otp:
+          - 23.x
+          - 24.x
+          - 25.x
