--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
 
           path: _build
 
-      - uses: erlef/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
 
         with:
           elixir-version: ${{ matrix.elixir }}
@@ -57,7 +57,7 @@ jobs:
 
           path: _build
 
-      - uses: erlef/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
 
         with:
           elixir-version: ${{ matrix.elixir }}
